--- a/public/assets/styles/styles.css
+++ b/public/assets/styles/styles.css
@@ -22,8 +22,9 @@ body {
 }
 
 h2 {
-    font-size: 24px;
-    margin-bottom: 20px;
+    font-size: 28px;
+    text-align: center;
+    margin: 0 auto 20px;
 }
 
 
@@ -33,8 +34,6 @@ h2 {
     margin-bottom: 20px; 
    
 }
-
-
 
 button {
     width: 300px;
@@ -97,7 +96,6 @@ input[type="password"],
 }
 
 
-/*sección de mainMenu.html*/
 
 .menu-lateral {
     width: 80px;
@@ -107,6 +105,7 @@ input[type="password"],
     align-items: center;
     padding: 20px 0;
     border-right: 2px solid #ddd;
+    
 }
 
 .menu-opciones {
@@ -120,6 +119,8 @@ input[type="password"],
 .menu-opciones.oculto {
     display: none;
 }
+
+
 
 .menu-boton {
     background: none;
@@ -151,26 +152,48 @@ input[type="password"],
 }
 
 .contenido-principal h2 {
-    font-size: 24px;
+    font-size: 55px;
     margin-bottom: 20px;
 }
 
 .galeria-avatares {
     display: grid;
-    grid-template-columns: repeat(auto-fill, minmax(150px, 1fr));
-    gap: 10px;
+    grid-template-columns: 2fr 1fr 1fr; 
+    grid-template-rows: repeat(2, 1fr); 
+    gap: 15px;
+    padding: 20px;
+    width: 100%;
+    max-width: 800px; 
+    margin: 0 auto;
+    justify-items: center;    
+}
+
+.avatar:nth-child(1) {
+    grid-column: 1 / 2;
+    grid-row: 1 / 3; 
+    width: 100%;
+    height: 100%;
+}
+
+.avatar{
+    width: 180px;
+    height: 180px;
+    overflow: hidden;
+    border-radius: 10px;
 }
 
 .avatar img {
     width: 100%;
-    height: auto;
-    border-radius: 10px;
+    height: 100%;
+    object-fit: cover;
 }
 
 .container-mensajes {
     display: flex;
     height: 100vh;
+    width: 180vh ;
 }
+
 
 .lista-conversaciones {
     width: 40%;
@@ -184,6 +207,14 @@ input[type="password"],
     margin-bottom: 15px;
 }
 
+.lista-conversaciones img {
+    width: 50px;
+    height: 50px;
+    border-radius: 50%;
+    margin-right: 10px;
+    margin-left: 020px;
+}
+
 .conversacion {
     display: flex;
     justify-content: space-between;
@@ -195,22 +226,23 @@ input[type="password"],
     transition: background-color 0.2s;
 }
 
-.conversacion:hover,
-.conversacion.seleccionada {
-    background-color: #e0e0e5;
+.conversacion:hover {
+    background-color: #e0e0e5; 
 }
 
 .mensaje-previo {
     color: #555;
-    font-size: 14px;
+    font-size: 18px;
+    line-height: 1.5;
+    margin-right: 25px;
 }
 
 .hora {
-    font-size: 12px;
+    font-size: 18px;
     color: #888;
 }
 
-
+/* Panel de mensajes */
 .panel-mensajes {
     width: 75%;
     padding: 20px;
@@ -229,7 +261,7 @@ input[type="password"],
 .mensajes {
     display: flex;
     flex-direction: column;
-    gap: 10px; /* Espacio entre mensajes */
+    gap: 10px; 
     padding: 20px;
 }
 
@@ -250,7 +282,7 @@ input[type="password"],
     align-self: flex-end;
 }
 
-
+/* Barra para escribir un mensaje */
 .barra-escribir {
     display: flex;
     align-items: center;
@@ -264,6 +296,7 @@ input[type="password"],
     border: none;
     border-radius: 25px;
     outline: none;
+    width: 80%;
 }
 
 .iconos-barra img {
@@ -279,6 +312,8 @@ input[type="password"],
     padding: 10px 0;
     border-top: 1px solid #ccc;
 }
+
+
 
 .barra-escribir input {
     flex: 1;
@@ -308,5 +343,6 @@ input[type="password"],
     width: 30px;
     cursor: pointer;
 }
+
 
 
