--- a/public/assets/styles/styles.css
+++ b/public/assets/styles/styles.css
@@ -414,3 +414,62 @@ input[type="password"],
       background-color: #0056b3;
     }
 
+  body {
+            font-family: Arial, sans-serif;
+            display: flex;
+            justify-content: center;
+            align-items: center;
+            height: 100vh;
+            margin: 0;
+            background-color: #000; /* Fondo negro */
+            color: #fff; /* Texto blanco */
+        }
+
+        .container {
+            display: flex;
+            justify-content: space-between;
+            width: 80%;
+        }
+
+        .avatar-container {
+            flex: 1;
+            text-align: center;
+        }
+
+        .avatar-container img {
+            width: 200px;
+            height: 400px;
+            border: 2px solid #fff; /* Borde blanco */
+            border-radius: 10px;
+            margin-bottom: 20px;
+        }
+
+        .options-container {
+            flex: 1;
+            padding: 20px;
+            text-align: center;
+            background-color: #333; /* Fondo gris oscuro */
+            border: 2px solid #444; /* Borde más claro */
+            border-radius: 10px;
+            box-shadow: 0 0 10px rgba(0, 0, 0, 0.5);
+        }
+
+        .options-container button {
+            display: block;
+            margin: 10px auto;
+            padding: 10px 20px;
+            background-color: #007BFF; /* Botones en tono azul */
+            color: white;
+            border: none;
+            border-radius: 5px;
+            cursor: pointer;
+            font-size: 16px;
+        }
+
+        .options-container button:hover {
+            background-color: #0056b3; /* Cambio de tono al pasar el ratón */
+        }
+
+        .options-container button:disabled {
+            background-color: #ccc;
+        }
