--- a/public/assets/styles/styles.css
+++ b/public/assets/styles/styles.css
@@ -437,18 +437,32 @@ input[type="password"],
             text-align: center;
         }
 
-        .avatar-container img {
+
+        .avatar-container {
+            flex: 1;
+            text-align: center;
+            overflow: hidden; 
+            position: relative;
             width: 200px;
-            height: 400px;
-            border: 2px solid #fff;
+            height: 400px; 
+         
             border-radius: 10px;
-            margin-bottom: 20px;
+        }
+
+        .avatar-container img {
+            width: 100%;
+            height: 100%;
+            object-fit: cover; 
+            object-position: center; 
+            display: block; 
+            border-radius: 10px; 
         }
 
         .options-container {
             flex: 1;
             padding: 20px;
             text-align: center;
+            
             background-color: #333; 
             border: 2px solid #444;
             border-radius: 10px;
@@ -466,6 +480,7 @@ input[type="password"],
             cursor: pointer;
             font-size: 16px;
         }
+
 
         .options-container button:hover {
             background-color: #0056b3; 
