--- a/public/assets/styles/styles.css
+++ b/public/assets/styles/styles.css
@@ -272,6 +272,7 @@ input[type="password"],
     flex-direction: column;
     gap: 10px; 
     padding: 20px;
+    color: #000; 
 }
 
 .mensaje-otro, .mensaje-propio {
